--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "author": "Pablo Hazan",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^15.6.0",
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "telegraf": "^4.3.0",
