--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.0",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.11",
     "telegraf": "^4.3.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
